fix: #{$_elementSpacing} * をcalc(#{$_elementSpacing} * )へ修正
- はじめの形だと正常に反映されていなかったため

--- a/005/devStuff/src/parts/_050_lv4H-voiceIcon.scss
+++ b/005/devStuff/src/parts/_050_lv4H-voiceIcon.scss
@@ -84,7 +84,7 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * .8;
+        padding: 0 0 calc(#{$_elementSpacing} * .8);
       }
 
       #{$_block}__h {
@@ -93,7 +93,7 @@
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * .8 0 0;
+        padding: calc(#{$_elementSpacing} * .8) 0 0;
       }
 
       #{$_block}__caption-upper + #{$_block}__h {
@@ -118,7 +118,7 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * 1.2;
+        padding: 0 0 calc(#{$_elementSpacing} * 1.2);
       }
 
       #{$_block}__h {
@@ -127,7 +127,7 @@
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * 1.2 0 0;
+        padding: calc(#{$_elementSpacing} * 1.2) 0 0;
       }
 
       #{$_block}__caption-upper + #{$_block}__h {
@@ -243,7 +243,7 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * .8;
+        padding: 0 0 calc(#{$_elementSpacing} * .8);
       }
 
       #{$_block}__h {
@@ -252,7 +252,7 @@
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * .8 0 0;
+        padding: calc(#{$_elementSpacing} * .8) 0 0;
       }
 
       #{$_block}__caption-upper + #{$_block}__h {
@@ -277,7 +277,7 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * 1.2;
+        padding: 0 0 calc(#{$_elementSpacing} * 1.2);
       }
 
       #{$_block}__h {
@@ -286,7 +286,7 @@
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * 1.2 0 0;
+        padding: calc(#{$_elementSpacing} * 1.2) 0 0;
       }
 
       #{$_block}__caption-upper + #{$_block}__h {
