--- a/010/devStuff/src/parts/_049_lv4H-caseIcon.scss
+++ b/010/devStuff/src/parts/_049_lv4H-caseIcon.scss
@@ -79,12 +79,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * .8;
+        padding: 0 0 calc(#{$_elementSpacing} * .8);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * .8 0 0;
+        padding: calc(#{$_elementSpacing} * .8) 0 0;
       }
 
       #{$_block}__h {
@@ -114,12 +114,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * 1.2;
+        padding: 0 0 calc(#{$_elementSpacing} * 1.2);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * 1.2 0 0;
+        padding: calc(#{$_elementSpacing} * 1.2) 0 0;
       }
 
       #{$_block}__h {
@@ -236,12 +236,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * .8;
+        padding: 0 0 calc(#{$_elementSpacing} * .8);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * .8 0 0;
+        padding: calc(#{$_elementSpacing} * .8) 0 0;
       }
 
       #{$_block}__h {
@@ -271,12 +271,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * 1.2;
+        padding: 0 0 calc(#{$_elementSpacing} * 1.2);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * 1.2 0 0;
+        padding: calc(#{$_elementSpacing} * 1.2) 0 0;
       }
 
       #{$_block}__h {
