--- a/010/devStuff/src/parts/_053_lv4H-num2Icon.scss
+++ b/010/devStuff/src/parts/_053_lv4H-num2Icon.scss
@@ -91,12 +91,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * .8;
+        padding: 0 0 calc(#{$_elementSpacing} * .8);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * .8 0 0;
+        padding: calc(#{$_elementSpacing} * .8) 0 0;
       }
 
       #{$_block}__h {
@@ -125,12 +125,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * 1.2;
+        padding: 0 0 calc(#{$_elementSpacing} * 1.2);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * 1.2 0 0;
+        padding: calc(#{$_elementSpacing} * 1.2) 0 0;
       }
 
       #{$_block}__h {
@@ -258,12 +258,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * .8;
+        padding: 0 0 calc(#{$_elementSpacing} * .8);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * .8 0 0;
+        padding: calc(#{$_elementSpacing} * .8) 0 0;
       }
 
       #{$_block}__h {
@@ -292,12 +292,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * 1.2;
+        padding: 0 0 calc(#{$_elementSpacing} * 1.2);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * 1.2 0 0;
+        padding: calc(#{$_elementSpacing} * 1.2) 0 0;
       }
 
       #{$_block}__h {
