--- a/018/devStuff/src/parts/_050_lv4H-voiceIcon.scss
+++ b/018/devStuff/src/parts/_050_lv4H-voiceIcon.scss
@@ -79,12 +79,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * .8;
+        padding: 0 0 calc(#{$_elementSpacing} * .8);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * .8 0 0;
+        padding: calc(#{$_elementSpacing} * .8) 0 0;
       }
 
       #{$_block}__h {
@@ -113,12 +113,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * 1.2;
+        padding: 0 0 calc(#{$_elementSpacing} * 1.2);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * 1.2 0 0;
+        padding: calc(#{$_elementSpacing} * 1.2) 0 0;
       }
 
       #{$_block}__h {
@@ -234,12 +234,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * .8;
+        padding: 0 0 calc(#{$_elementSpacing} * .8);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_s, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * .8 0 0;
+        padding: calc(#{$_elementSpacing} * .8) 0 0;
       }
 
       #{$_block}__h {
@@ -268,12 +268,12 @@
 
       #{$_block}__caption-upper {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: 0 0 #{$_elementSpacing} * 1.2;
+        padding: 0 0 calc(#{$_elementSpacing} * 1.2);
       }
 
       #{$_block}__caption-lower {
         @include g-font($_fontSize_caption_l, $_lineHeight_caption);
-        padding: #{$_elementSpacing} * 1.2 0 0;
+        padding: calc(#{$_elementSpacing} * 1.2) 0 0;
       }
 
       #{$_block}__h {
